--- a/packages/hunspell-reader/.gitignore
+++ b/packages/hunspell-reader/.gitignore
@@ -25,6 +25,8 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+dist
+typings
 
 # Dependency directories
 node_modules
