--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -26,6 +26,7 @@
     "typescript": "^1.8.10"
   },
   "dependencies": {
+    "es6-promise": "^3.2.1",
     "get-uri": "^2.0.0",
     "lodash": "^4.13.1",
     "rx": "^4.1.0",
