Exclude node directories from ESLint

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -31,5 +31,18 @@
     "lodash": "^4.13.1",
     "rx": "^4.1.0",
     "tsmerge": "^1.0.4"
+  },
+  "eslintConfig": {
+    "root": true,
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true,
+      "mocha": true
+    },
+    "rules": {
+    }
   }
 }
