Add command line to output words from a dictionary.

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -26,7 +26,9 @@
     "typescript": "^1.8.10"
   },
   "dependencies": {
+    "commander": "^2.9.0",
     "es6-promise": "^3.2.1",
+    "findup-sync": "^0.4.1",
     "get-uri": "^2.0.0",
     "lodash": "^4.13.1",
     "rx": "^4.1.0",
@@ -42,7 +44,6 @@
       "node": true,
       "mocha": true
     },
-    "rules": {
-    }
+    "rules": {}
   }
 }
