Add support for other encodings.

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -31,6 +31,7 @@
     "es6-promise": "^3.2.1",
     "findup-sync": "^0.4.1",
     "get-uri": "^2.0.0",
+    "iconv-lite": "^0.4.13",
     "lodash": "^4.13.1",
     "rx": "^4.1.0",
     "rx-node": "^1.0.2",
