--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "typings": "dist/src/index.d.ts",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --recursive ./dist/*.test.js",
-    "build": "./node_modules/.bin/tsc"
+    "test": "mocha --recursive ./dist/*.test.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
