--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -22,17 +22,23 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/commander": "^2.3.31",
+    "@types/findup-sync": "^0.3.29",
+    "@types/iconv-lite": "0.0.1",
+    "@types/lodash": "^4.14.48",
+    "@types/mocha": "^2.2.37",
+    "@types/node": "^6.0.58",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3",
-    "typescript": "^1.8.10"
+    "mocha": "^3.2.0",
+    "typescript": "^2.1.4"
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "es6-promise": "^3.2.1",
-    "findup-sync": "^0.4.1",
+    "findup-sync": "^0.4.3",
     "get-uri": "^2.0.0",
-    "iconv-lite": "^0.4.13",
-    "lodash": "^4.13.1",
+    "iconv-lite": "^0.4.15",
+    "lodash": "^4.17.4",
     "rx": "^4.1.0",
     "rx-node": "^1.0.2",
     "tsmerge": "^1.0.4"
