--- a/packages/hunspell-reader/.gitignore
+++ b/packages/hunspell-reader/.gitignore
@@ -25,8 +25,9 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-dist
-typings
+dist/**/*.js.map
+dist/**/*.test.js
+dist/**/*.test.d.ts
 
 # Dependency directories
 node_modules
