--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -2,9 +2,9 @@
   "name": "hunspell-reader",
   "version": "0.1.0",
   "description": "A library for reading Hunspell Dictionary Files",
-  "bin": "./dist/src/index.js",
-  "main": "dist/src/index.js",
-  "typings": "dist/src/index.d.ts",
+  "bin": "./dist/index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "mocha --recursive ./dist/*.test.js",
     "build": "tsc"
