--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -1,12 +1,13 @@
 {
   "name": "hunspell-reader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A library for reading Hunspell Dictionary Files",
   "bin": "./dist/app.js",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist/"
+    "dist/",
+    "src/"
   ],
   "scripts": {
     "test": "mocha --recursive ./dist/*.test.js",
