Make sure typescript is in the dev dependencies.

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -47,7 +47,8 @@
     "get-uri": "^2.0.0",
     "iconv-lite": "^0.4.15",
     "lodash": "^4.17.4",
-    "tsmerge": "^1.0.4"
+    "tsmerge": "^1.0.4",
+    "typescript": "^2.1.6"
   },
   "eslintConfig": {
     "root": true,
