--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -44,6 +44,7 @@
     "cspell-tools": "^1.0.5",
     "findup-sync": "^0.4.3",
     "fs-promise": "^1.0.0",
+    "gensequence": "^1.0.0",
     "get-uri": "^2.0.0",
     "iconv-lite": "^0.4.15",
     "lodash": "^4.17.4",
