--- a/packages/hunspell-reader/tsconfig.json
+++ b/packages/hunspell-reader/tsconfig.json
@@ -1,14 +1,21 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+		"target": "es2015",
         "noImplicitAny": false,
+		"noImplicitThis": true,
+		"strictNullChecks": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
         "sourceMap": true,
+		"alwaysStrict": true,
         "declaration": true,
         "moduleResolution": "node",
         "removeComments": false,
         "preserveConstEnums": false,
-        "outDir": "dist"
+        "outDir": "dist",
+		"lib": ["dom", "dom.iterable", "es2015"],
+		"forceConsistentCasingInFileNames": true
     },
     "exclude": [
         "node_modules",
