Fix #1 - speed improvements and fixed slowness due to writing to files.

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -31,7 +31,6 @@
     "@types/commander": "^2.3.31",
     "@types/fs-promise": "^1.0.1",
     "@types/iconv-lite": "0.0.1",
-    "@types/lodash": "^4.14.50",
     "@types/mocha": "^2.2.37",
     "@types/node": "^6.0.58",
     "chai": "^3.5.0",
@@ -40,13 +39,13 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "cspell-tools": "^1.0.5",
+    "cspell-tools": "^1.0.8",
     "fs-promise": "^1.0.0",
     "gensequence": "^1.0.0",
     "get-uri": "^2.0.0",
     "iconv-lite": "^0.4.15",
-    "lodash": "^4.17.4",
-    "tsmerge": "^1.0.4",
+    "rxjs": "^5.1.1",
+    "rxjs-stream": "^1.0.3",
     "typescript": "^2.1.6"
   },
   "eslintConfig": {
