--- a/packages/hunspell-reader/.vscode/launch.json
+++ b/packages/hunspell-reader/.vscode/launch.json
@@ -23,7 +23,7 @@
 			// Name of configuration; appears in the launch configuration drop down menu.
 			"name": "Run mocha",
 			// Type of configuration. Possible values: "node", "mono".
-			"type": "node",
+			"type": "node2",
             // Request type "launch" or "attach"
             "request": "launch",
 			// Workspace relative or absolute path to the program.
