--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hunspell-reader",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A library for reading Hunspell Dictionary Files",
   "bin": "./dist/app.js",
   "main": "dist/index.js",
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "test": "mocha --recursive ./dist/*.test.js",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -39,14 +40,15 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "cspell-tools": "^1.0.8",
+    "cspell-tools": "^1.0.9",
     "fs-promise": "^1.0.0",
     "gensequence": "^1.0.0",
     "get-uri": "^2.0.0",
     "iconv-lite": "^0.4.15",
     "rxjs": "^5.1.1",
-    "rxjs-stream": "^1.0.3",
-    "typescript": "^2.1.6"
+    "rxjs-from-iterable": "^1.0.5",
+    "rxjs-stream": "^1.0.4",
+    "typescript": "^2.2.0"
   },
   "eslintConfig": {
     "root": true,
