Use cspell-trie package

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "cspell-tools": "^1.0.9",
+    "cspell-trie": "^1.0.1",
     "fs-promise": "^1.0.0",
     "gensequence": "^1.0.0",
     "get-uri": "^2.0.0",
