Remove dependency on cspell-tools

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -40,16 +40,15 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "cspell-tools": "^1.0.9",
+    "cspell-lib": "^1.0.1",
     "cspell-trie": "^1.0.1",
-    "fs-promise": "^1.0.0",
+    "fs-promise": "^2.0.0",
     "gensequence": "^1.0.0",
-    "get-uri": "^2.0.0",
     "iconv-lite": "^0.4.15",
     "rxjs": "^5.1.1",
     "rxjs-from-iterable": "^1.0.5",
     "rxjs-stream": "^1.0.4",
-    "typescript": "^2.2.0"
+    "typescript": "^2.1.6"
   },
   "eslintConfig": {
     "root": true,
