Clean up packages.

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -31,7 +31,6 @@
     "@types/chai": "^3.4.34",
     "@types/commander": "^2.3.31",
     "@types/fs-promise": "^1.0.1",
-    "@types/iconv-lite": "0.0.1",
     "@types/mocha": "^2.2.37",
     "@types/node": "^6.0.58",
     "chai": "^3.5.0",
@@ -41,14 +40,11 @@
   "dependencies": {
     "commander": "^2.9.0",
     "cspell-lib": "^1.0.1",
-    "cspell-trie": "^1.0.1",
     "fs-promise": "^2.0.0",
     "gensequence": "^1.0.0",
-    "iconv-lite": "^0.4.15",
     "rxjs": "^5.1.1",
     "rxjs-from-iterable": "^1.0.5",
-    "rxjs-stream": "^1.0.4",
-    "typescript": "^2.1.6"
+    "rxjs-stream": "^1.0.4"
   },
   "eslintConfig": {
     "root": true,
