--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prepublish": "npm run clean-build && npm test",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run generate-code-coverage && npm run coverage-coveralls",
+    "which": "which node && echo $PATH",
     "test": "mocha --recursive \"dist/**/*.test.js\""
   },
   "repository": {
