Remove dependency on fs-promise

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hunspell-reader",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A library for reading Hunspell Dictionary Files",
   "bin": "./dist/app.js",
   "main": "dist/index.js",
@@ -29,22 +29,22 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/commander": "^2.3.31",
-    "@types/fs-promise": "^1.0.1",
-    "@types/mocha": "^2.2.37",
-    "@types/node": "^6.0.58",
+    "@types/chai": "^3.5.2",
+    "@types/commander": "^2.9.0",
+    "@types/fs-extra": "^3.0.0",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.18",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
-    "typescript": "^2.1.6"
+    "mocha": "^3.3.0",
+    "rimraf": "^2.6.1",
+    "typescript": "^2.3.2"
   },
   "dependencies": {
     "commander": "^2.9.0",
-    "cspell-lib": "^1.0.1",
-    "fs-promise": "^2.0.0",
-    "gensequence": "^1.0.0",
-    "rxjs": "^5.1.1",
+    "cspell-lib": "^1.0.2",
+    "fs-extra": "^3.0.1",
+    "gensequence": "^1.2.0",
+    "rxjs": "^5.4.0",
     "rxjs-from-iterable": "^1.0.5",
     "rxjs-stream": "^1.0.4"
   },
