--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hunspell-reader",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A library for reading Hunspell Dictionary Files",
   "bin": "./dist/app.js",
   "main": "dist/index.js",
@@ -43,7 +43,7 @@
     "commander": "^2.9.0",
     "cspell-lib": "^1.0.2",
     "fs-extra": "^3.0.1",
-    "gensequence": "^1.2.0",
+    "gensequence": "^2.0 || ^1.2.0",
     "rxjs": "^5.4.0",
     "rxjs-from-iterable": "^1.0.5",
     "rxjs-stream": "^1.0.4"
