--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -30,21 +30,22 @@
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
     "@types/chai": "^3.5.2",
-    "@types/commander": "^2.9.0",
+    "@types/commander": "^2.11.0",
     "@types/fs-extra": "^3.0.0",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.18",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^7.0.46",
     "chai": "^3.5.0",
-    "mocha": "^3.3.0",
-    "rimraf": "^2.6.1",
-    "typescript": "^2.3.2"
+    "mocha": "^3.5.3",
+    "rimraf": "^2.6.2",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.5.3"
   },
   "dependencies": {
-    "commander": "^2.9.0",
+    "commander": "^2.11.0",
     "cspell-lib": "^1.0.2",
     "fs-extra": "^3.0.1",
-    "gensequence": "^2.0 || ^1.2.0",
-    "rxjs": "^5.4.0",
+    "gensequence": "^2.1.1",
+    "rxjs": "^5.5.0",
     "rxjs-from-iterable": "^1.0.5",
     "rxjs-stream": "^1.0.4"
   },
