--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -7,7 +7,8 @@
   "typings": "dist/index.d.ts",
   "files": [
     "dist/",
-    "src/"
+    "src/",
+    "!**/*.test.*"
   ],
   "scripts": {
     "test": "mocha --recursive ./dist/*.test.js",
@@ -35,27 +36,25 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "@types/commander": "^2.11.0",
-    "@types/fs-extra": "^3.0.0",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.46",
-    "chai": "^3.5.0",
+    "@types/chai": "^4.1.3",
+    "@types/fs-extra": "^5.0.2",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^8.10.10",
+    "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "mocha": "^3.5.3",
-    "nyc": "^11.2.1",
+    "mocha": "^5.1.1",
+    "nyc": "^11.7.1",
     "rimraf": "^2.6.2",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.5.3"
+    "ts-node": "^6.0.1",
+    "typescript": "^2.8.3"
   },
   "dependencies": {
-    "commander": "^2.11.0",
-    "cspell-lib": "^1.0.2",
-    "fs-extra": "^3.0.1",
+    "commander": "^2.15.1",
+    "cspell-lib": "^3.0.1",
+    "fs-extra": "^5.0.0",
     "gensequence": "^2.1.1",
-    "rxjs": "^5.5.0",
-    "rxjs-from-iterable": "^1.0.5",
-    "rxjs-stream": "^1.0.4"
+    "rxjs": "^6.0.0",
+    "rxjs-stream": "^2.0.3"
   },
   "eslintConfig": {
     "root": true,
