Enable better output streaming options.

--- a/packages/hunspell-reader/.vscode/launch.json
+++ b/packages/hunspell-reader/.vscode/launch.json
@@ -12,10 +12,10 @@
 			"cwd": "${workspaceRoot}",
 			"args": [
 				"words",
-				"-s",
+				"--infix",
+				"-p",
 				"-o",
 				"words_en.txt",
-				"-u",
 				"./dictionaries/en_US.dic"
 			],
             "outFiles": []
