--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -14,8 +14,8 @@
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
     "clean": "rimraf dist",
-    "clean-build": "npm run clean; npm run build",
-    "coverage": "NODE_ENV=test nyc npm run test-ts",
+    "clean-build": "npm run clean && npm run build",
+    "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "test-ts": "rimraf temp ; NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
     "test": "rimraf temp ; mocha --recursive ./dist/**/*.test.js"
   },
@@ -34,20 +34,20 @@
   "homepage": "https://github.com/Jason3S/cspell-lib#readme",
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/fs-extra": "^5.0.4",
+    "@types/fs-extra": "^5.1.0",
     "@types/lorem-ipsum": "^1.0.2",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^8.10.39",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^8.10.48",
     "chai": "^4.2.0",
     "fs-extra": "^7.0.1",
     "lorem-ipsum": "^1.0.6",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.2",
     "ts-node": "^7.0.1",
-    "tslint": "^5.12.1",
-    "typescript": "^3.2.2"
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "iconv-lite": "^0.4.24",
