--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
-    "clean": "rimraf dist ; rimraf temp",
+    "clean-build": "npm run clean && npm run build",
+    "clean": "rimraf dist && rimraf temp",
+    "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "lint": "tslint --project tsconfig.json",
     "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
     "test-watch": "npm run build && mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
@@ -39,34 +41,53 @@
   "homepage": "https://github.com/Jason3S/cSpell-Tools#readme",
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/fs-extra": "^5.0.4",
+    "@types/fs-extra": "^5.1.0",
     "@types/glob": "^7.1.1",
     "@types/lorem-ipsum": "^1.0.2",
     "@types/minimatch": "^3.0.3",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^8.10.39",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^8.10.48",
     "@types/xregexp": "^3.0.29",
     "chai": "^4.2.0",
     "lorem-ipsum": "^1.0.6",
-    "mocha": "^5.2.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.1"
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   },
   "dependencies": {
-    "commander": "^2.19.0",
+    "commander": "^2.20.0",
     "cspell-lib": "^3.0.5",
     "cspell-trie": "^3.0.7",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
-    "glob": "^7.1.3",
-    "hunspell-reader": "^2.1.1",
+    "glob": "^7.1.4",
+    "hunspell-reader": "^2.1.2",
     "iconv-lite": "^0.4.24",
     "minimatch": "^3.0.4",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.2",
     "rxjs-stream": "^3.0.1",
     "xregexp": "^4.2.4"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/**/*.test.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "json",
+      "html"
+    ]
   },
   "engines": {
     "node": ">=8.0.0"
