--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -11,12 +11,12 @@
     "!**/*.test.*"
   ],
   "scripts": {
-    "clean": "rimraf dist/**",
+    "clean": "rimraf dist",
     "test": "mocha --recursive \"./dist/**/*.test.js\"",
     "test-watch": "mocha --watch --require ts-node/register --recursive \"src/**/*.test.ts\"",
-    "build": "tsc",
-    "clean-build": "npm run clean ; npm run build",
-    "coverage": "NODE_ENV=test nyc npm run test-ts",
+    "build": "tsc -p .",
+    "clean-build": "npm run clean && npm run build",
+    "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run coverage && npm run coverage-coveralls",
@@ -37,28 +37,28 @@
   },
   "homepage": "https://github.com/Jason3S/cspell-trie#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.6",
-    "@types/fs-extra": "^5.0.4",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.18",
+    "@types/chai": "^4.1.7",
+    "@types/fs-extra": "^5.1.0",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^10.14.6",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
-    "cspell-dict-en_us": "^1.2.8",
-    "cspell-dict-es-es": "^1.0.8",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "rimraf": "^2.6.2",
+    "coveralls": "^3.0.3",
+    "cspell-dict-en_us": "^1.2.12",
+    "cspell-dict-es-es": "^1.0.11",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.1"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
-    "commander": "^2.18.0",
-    "cspell-lib": "^3.0.4",
-    "fs-extra": "^7.0.0",
-    "gensequence": "^2.1.1",
-    "hunspell-reader": "^2.0.4",
+    "commander": "^2.20.0",
+    "cspell-lib": "^3.0.5",
+    "fs-extra": "^7.0.1",
+    "gensequence": "^2.1.2",
+    "hunspell-reader": "^2.1.2",
     "js-xxhash": "^1.0.1",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.2",
     "rxjs-stream": "^3.0.1"
   },
   "nyc": {
