--- a/package.json
+++ b/package.json
@@ -33,12 +33,32 @@
   },
   "homepage": "https://github.com/cspell-app/cspell#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/comment-json": "^1.1.1",
+    "@types/configstore": "^4.0.0",
+    "@types/fs-extra": "^5.1.0",
+    "@types/glob": "^7.1.1",
+    "@types/lorem-ipsum": "^1.0.2",
+    "@types/minimatch": "^3.0.3",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^8.10.48",
+    "@types/xregexp": "^3.0.29",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.3",
     "cspell": "^3.2.10",
+    "cspell-dict-en_us": "^1.2.12",
+    "cspell-dict-es-es": "^1.0.11",
+    "cspell-dict-nl-nl": "^1.0.16",
+    "cspell-tools": "file:../cspell-tools",
+    "fs-extra": "^7.0.1",
     "lerna": "^3.13.4",
+    "lorem-ipsum": "^1.0.6",
+    "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
+    "rxjs": "^6.5.2",
     "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
   "nyc": {
