--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -60,27 +60,7 @@
   },
   "homepage": "https://github.com/Jason3S/cspell#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/comment-json": "^1.1.1",
-    "@types/configstore": "^4.0.0",
-    "@types/fs-extra": "^5.1.0",
-    "@types/glob": "^7.1.1",
-    "@types/lorem-ipsum": "^1.0.2",
-    "@types/minimatch": "^3.0.3",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^8.10.48",
-    "@types/xregexp": "^3.0.29",
-    "chai": "^4.2.0",
-    "coveralls": "^3.0.3",
-    "cspell-dict-nl-nl": "^1.0.16",
-    "cspell-tools": "^3.0.5",
-    "lorem-ipsum": "^1.0.6",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
-    "rimraf": "^2.6.3",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "cspell-tools": "^3.0.5"
   },
   "dependencies": {
     "chalk": "^2.4.2",
