--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: node_js
 os:
   - linux
   - osx
-  - windows
+  # Turn windows on when it is out of beta mode in travis-ci
+  # - windows
 
 node_js:
   - "node"
