--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,13 @@
+image:
+  - Visual Studio 2017
+  - Ubuntu
+
 # Test against the latest version of this Node.js version
 environment:
   matrix:
     # node.js
     # - nodejs_version: "12"
+    - nodejs_version: "Current"
     - nodejs_version: "10"
     - nodejs_version: "8"
 
