Update references from Jason3S to streetsidesoftware

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jason3S/cspell-lib.git"
+    "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "keywords": [
     "cspell"
@@ -29,9 +29,9 @@
   "author": "Jason Dent",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Jason3S/cspell-lib/issues"
+    "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-lib"
   },
-  "homepage": "https://github.com/Jason3S/cspell-lib#readme",
+  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "iconv-lite": "^0.4.24",
     "rxjs-stream": "^3.0.1"
