--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jason3S/cspell-trie.git"
+    "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "keywords": [
     "trie",
@@ -33,9 +33,9 @@
   "author": "Jason Dent",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Jason3S/cspell-trie/issues"
+    "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-trie"
   },
-  "homepage": "https://github.com/Jason3S/cspell-trie#readme",
+  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^2.20.0",
     "cspell-lib": "^3.0.6",
