--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jason3S/cspell.git"
+    "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "keywords": [
     "spell",
@@ -56,9 +56,9 @@
   "author": "Jason Dent",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Jason3S/cspell/issues"
+    "url": "https://github.com/streetsidesoftware/cspell/issues"
   },
-  "homepage": "https://github.com/Jason3S/cspell#readme",
+  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
     "cspell-tools": "^3.0.6"
   },
