--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -17,6 +17,7 @@
     "clean-build": "npm run clean && npm run build",
     "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "test-ts": "rimraf temp ; NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
+    "test-watch": "mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "test": "rimraf temp ; mocha --recursive ./dist/**/*.test.js"
   },
   "repository": {
