--- a/packages/cspell/.vscode/launch.json
+++ b/packages/cspell/.vscode/launch.json
@@ -60,7 +60,7 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Mocha Current File",
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
 			"args": [
 				"--timeout","999999",
 				"--colors",
@@ -85,11 +85,16 @@
             // Request type "launch" or "attach"
             "request": "launch",
 			// Workspace relative or absolute path to the program.
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
 			// Automatically stop program after launch.
 			"stopOnEntry": false,
 			// Command line arguments passed to the program.
-			"args": ["--recursive", "dist/**/*.test.js"],
+			"args": [
+				"--timeout","999999",
+				"--colors",
+                "--require", "ts-node/register",
+                "--recursive", "src/**/*.ts"
+            ],
 			// Workspace relative or absolute path to the working directory of the program being debugged. Default is the current workspace.
 			"cwd": "${workspaceRoot}",
 			// Workspace relative or absolute path to the runtime executable to be used. Default is the runtime executable on the PATH.
