--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -16,7 +16,7 @@
     "config/**"
   ],
   "scripts": {
-    "clean": "rimraf ./dist",
+    "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "lint-travis": "tslint \"src/**/*.ts\"",
     "build": "npm run compile",
@@ -30,7 +30,7 @@
     "coverage": "npm run generate-code-coverage",
     "generate-code-coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
     "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
-    "test-watch": "mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
+    "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "prepublishOnly": "npm run lint && npm run clean-build && npm test",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run generate-code-coverage && npm run coverage-coveralls",
