--- a/packages/cspell/.vscode/launch.json
+++ b/packages/cspell/.vscode/launch.json
@@ -66,8 +66,7 @@
 				"--colors",
 				"--require", "ts-node/register",
 				"${file}"
-			],
-			"internalConsoleOptions": "openOnSessionStart"
+			]
 		},
         {
             "type": "node",
@@ -102,8 +101,7 @@
 			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
 			"sourceMaps": true,
 			// Environment variables passed to the program.
-			"env": { "NODE_ENV": "test"},
-            "protocol": "inspector"
+			"env": { "NODE_ENV": "test"}
 		}
     ]
 }
