--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/fs-extra": "^5.1.0",
     "@types/glob": "^7.1.1",
     "@types/lorem-ipsum": "^1.0.2",
+    "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.48",
