--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "lerna run build",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
-    "coverage": "rimraf .nyc_output && lerna run coverage",
+    "coverage": "npm run gen-coverage && nyc report --reporter=lcov --reporter=html",
+    "gen-coverage": "rimraf .nyc_output && lerna run coverage",
     "install": "lerna bootstrap",
     "prepare": "npm run clean-build",
     "check-spelling": "cspell **/{*.ts,*.md}",
     "lint-travis": "lerna run lint-travis",
-    "travis-coverage": "npm run coverage && nyc report --reporter=text-lcov | coveralls",
+    "travis-coverage": "npm run gen-coverage && nyc report --reporter=text-lcov | coveralls",
     "test-spec": "lerna run test-spec",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test"
