--- a/packages/cspell/tsconfig.json
+++ b/packages/cspell/tsconfig.json
@@ -12,7 +12,14 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"baseUrl": "src",
+		"paths": {
+			"*": [
+				"*",
+				"types/*"
+			]
+	  	}
 	},
 	"include": [
 		"src/**/*.ts",
