--- a/packages/cspell/tsconfig.json
+++ b/packages/cspell/tsconfig.json
@@ -12,14 +12,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"outDir": "dist",
-		"forceConsistentCasingInFileNames": true,
-		"baseUrl": "src",
-		"paths": {
-			"*": [
-				"*",
-				"types/*"
-			]
-	  	}
+		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
 		"src/**/*.ts",
