--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/cspell-app/cspell#readme",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.1.7",
     "@types/comment-json": "^1.1.1",
     "@types/configstore": "^4.0.0",
@@ -44,11 +45,12 @@
     "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
     "@types/mocha": "^5.2.6",
+    "@types/mock-require": "^2.0.0",
     "@types/node": "^8.10.48",
     "@types/xregexp": "^3.0.29",
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
-    "cspell": "^3.2.13",
+    "cspell": "^3.2.15",
     "cspell-dict-en_us": "^1.2.12",
     "cspell-dict-es-es": "^1.0.11",
     "cspell-dict-nl-nl": "^1.0.16",
@@ -57,9 +59,11 @@
     "lerna": "^3.13.4",
     "lorem-ipsum": "^1.0.6",
     "mocha": "^6.1.4",
+    "mock-require": "^3.0.3",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "rxjs": "^6.5.2",
+    "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
