--- a/packages/cspell/.vscode/settings.json
+++ b/packages/cspell/.vscode/settings.json
@@ -4,5 +4,8 @@
         "**/node_modules": true,
         "**/bower_components": true,
         "dist": true
-    }
+    },
+    "cSpell.ignoreWords": [
+        "istanbuljs"
+    ]
 }
