Fix repo references

--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -7,7 +7,7 @@
     "glob"
   ],
   "author": "Jason Dent <jason@streetsidesoftware.nl>",
-  "homepage": "https://github.com/cspell-app/cspell/tree/master/packages/cspell-glob#readme",
+  "homepage": "https://github.com/streetsidesoftware/cspell/tree/master/packages/cspell-glob#readme",
   "license": "MIT",
   "main": "lib/index.js",
   "directories": {
@@ -32,10 +32,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jason3S/cspell.git"
+    "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "bugs": {
-    "url": "https://github.com/Jason3S/cspell/issues"
+    "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-glob"
   },
   "nyc": {
     "include": [
