--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
+    "check-spelling": "cspell **/{*.ts,*.md}",
     "clean-build": "lerna run clean-build",
     "clean": "lerna run clean",
     "coverage": "npm run gen-coverage && nyc report --reporter=lcov --reporter=html",
     "gen-coverage": "rimraf .nyc_output && lerna run coverage",
     "install": "lerna bootstrap",
-    "prepare": "npm run clean-build",
-    "check-spelling": "cspell **/{*.ts,*.md}",
     "lint-travis": "lerna run lint-travis",
-    "travis-coverage": "npm run gen-coverage && nyc report --reporter=text-lcov | coveralls",
+    "prepare": "npm run clean-build",
     "test-spec": "lerna run test-spec",
+    "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
+    "travis-coverage": "npm run gen-coverage && nyc report --reporter=text-lcov | coveralls",
     "test": "lerna run test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cspell-app/cspell.git"
+    "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "keywords": [
     "spelling",
@@ -31,9 +32,9 @@
   "author": "Jason Dent",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cspell-app/cspell/issues"
+    "url": "https://github.com/streetsidesoftware/cspell/issues"
   },
-  "homepage": "https://github.com/cspell-app/cspell#readme",
+  "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.1.7",
