--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "commander": "^2.20.0",
     "cspell-lib": "^3.0.8",
+    "cspell-trie-lib": "^3.0.13",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "hunspell-reader": "^2.1.2",
