Use cspell-trie-lib
Removes dependency upon rxjs

--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -38,14 +38,10 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^2.20.0",
-    "cspell-lib": "^3.0.8",
     "cspell-trie-lib": "^3.0.13",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
-    "hunspell-reader": "^2.1.2",
-    "js-xxhash": "^1.0.1",
-    "rxjs": "^6.5.2",
-    "rxjs-stream": "^3.0.1"
+    "iterable-to-stream": "^1.0.1"
   },
   "nyc": {
     "include": [
