--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist/**",
-    "src/**",
+    "!**/*.map",
     "!**/*.test.*"
   ],
   "scripts": {
