--- a/packages/cspell-lib/.vscode/launch.json
+++ b/packages/cspell-lib/.vscode/launch.json
@@ -18,7 +18,7 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Mocha Current File",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
             "runtimeArgs": [
             ],
 			"args": [
