--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "3.0.8",
+  "version": "4.0.0",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -16,7 +16,7 @@
     "clean": "rimraf dist",
     "clean-build": "npm run clean && npm run build",
     "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
-    "test-ts": "rimraf temp ; NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
+    "test-ts": "../../node_modules/.bin/rimraf temp ; NODE_ENV=test ../../node_modules/.bin/mocha --require ts-node/register --recursive \"src/**/*.test.ts\"",
     "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "test": "rimraf temp ; mocha --recursive ./dist/**/*.test.js"
   },
@@ -35,11 +35,10 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "iconv-lite": "^0.4.24",
-    "rxjs-stream": "^3.0.1"
+    "iterable-to-stream": "^1.0.1",
+    "stream-to-iterator": "^3.0.2-0"
   },
-  "peerDependencies": {
-    "rxjs": "^6.0.0"
-  },
+  "peerDependencies": {},
   "nyc": {
     "include": [
       "src/**/*.ts"
@@ -59,6 +58,6 @@
     ]
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   }
 }
