--- a/packages/cspell-trie/.vscode/launch.json
+++ b/packages/cspell-trie/.vscode/launch.json
@@ -23,7 +23,7 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Mocha Test Current File",
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+			"program": "${workspaceRoot}/../../node_modules/mocha/bin/_mocha",
 			"args": [
 				"--timeout","999999",
 				"--colors",
