--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "3.2.17",
+  "version": "4.0.0",
   "description": "A Spelling Checker for Code!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -82,8 +82,8 @@
     "cspell-dict-python": "^1.0.9",
     "cspell-dict-rust": "^1.0.6",
     "cspell-dict-scala": "^1.0.6",
-    "cspell-lib": "^3.0.8",
-    "cspell-trie": "^3.0.10",
+    "cspell-trie-lib": "^4.0.0",
+    "cspell-lib": "^4.0.0",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "get-stdin": "^7.0.0",
@@ -94,7 +94,7 @@
     "xregexp": "^4.2.4"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "nyc": {
     "include": [
