--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie",
-  "version": "4.0.0",
+  "version": "4.0.1-alpha.0",
   "description": "Trie Data Structure and tools to support cspell.",
   "bin": "./dist/app.js",
   "main": "dist/index.js",
@@ -38,7 +38,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^2.20.0",
-    "cspell-trie-lib": "^4.0.0",
+    "cspell-trie-lib": "^4.0.1-alpha.0",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "iterable-to-stream": "^1.0.1"
