--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "4.0.1",
+  "version": "4.0.0",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -38,6 +38,7 @@
     "iterable-to-stream": "^1.0.1",
     "stream-to-iterator": "^3.0.2-0"
   },
+  "peerDependencies": {},
   "nyc": {
     "include": [
       "src/**/*.ts"
