--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "4.0.1-alpha.0",
+  "version": "4.0.0",
   "description": "A Spelling Checker for Code!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -59,6 +59,8 @@
     "url": "https://github.com/streetsidesoftware/cspell/issues"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
+  "devDependencies": {
+  },
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
@@ -79,8 +81,8 @@
     "cspell-dict-python": "^1.0.9",
     "cspell-dict-rust": "^1.0.6",
     "cspell-dict-scala": "^1.0.6",
-    "cspell-lib": "^4.0.1",
-    "cspell-trie-lib": "^4.0.1-alpha.0",
+    "cspell-trie-lib": "^4.0.0",
+    "cspell-lib": "^4.0.0",
     "fs-extra": "^7.0.1",
     "gensequence": "^2.1.2",
     "get-stdin": "^7.0.0",
