--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -12,12 +12,12 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "test": "mocha --recursive \"./dist/**/*.test.js\"",
+    "test": "../../node_modules/.bin/mocha --recursive \"./dist/**/*.test.js\"",
     "test-watch": "../../node_modules/.bin/mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "build": "tsc -p .",
     "clean-build": "npm run clean && npm run build",
     "coverage": "NODE_ENV=test nyc --silent --no-clean --temp-dir=../../.nyc_output npm run test-ts",
-    "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
+    "test-ts": "NODE_ENV=test ../../node_modules/.bin/mocha --require ts-node/register --recursive \"src/**/*.test.ts\"",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run coverage && npm run coverage-coveralls",
     "watch": "tsc -w"
@@ -63,5 +63,6 @@
   },
   "engines": {
     "node": ">=10.0.0"
-  }
+  },
+  "devDependencies": {}
 }
