--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "cspell-dict-en_us": "^1.2.12",
     "cspell-dict-es-es": "^1.0.11",
     "cspell-dict-nl-nl": "^1.0.16",
-    "cspell-tools": "^3.0.8",
+    "cspell-tools": "file:packages/cspell-tools",
     "fs-extra": "^7.0.1",
     "lerna": "^3.13.4",
     "lorem-ipsum": "^1.0.6",
