Remove unused package

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -35,8 +35,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "iconv-lite": "^0.4.24",
-    "iterable-to-stream": "^1.0.1",
-    "stream-to-iterator": "^3.0.2-0"
+    "iterable-to-stream": "^1.0.1"
   },
   "nyc": {
     "include": [
