Fix clean install

--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -4,7 +4,7 @@
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "bin": {
-    "cspell-tools": "./dist/app.js"
+    "cspell-tools": "bin.js"
   },
   "scripts": {
     "build": "tsc -p .",
@@ -28,6 +28,7 @@
     "Compiler"
   ],
   "files": [
+    "bin.js",
     "dist/**",
     "!**/*.map",
     "!**/*.test.*"
