--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/fs-extra": "^7.0.0",
     "@types/mocha": "^5.2.6",
     "@types/node": "^10.14.7",
     "chai": "^4.2.0",
@@ -53,8 +54,7 @@
     "cspell-lib": "^4.0.3",
     "fs-extra": "^8.0.1",
     "gensequence": "^2.1.2",
-    "rxjs": "^6.5.2",
-    "rxjs-stream": "^3.0.2"
+    "iconv-lite": "^0.4.24"
   },
   "eslintConfig": {
     "root": true,
