Do not build on node 8.

--- a/packages/hunspell-reader/appveyor.yml
+++ b/packages/hunspell-reader/appveyor.yml
@@ -1,6 +1,10 @@
 # Test against the latest version of this Node.js version
 environment:
-  nodejs_version: "8"
+  matrix:
+    # node.js
+    # - nodejs_version: "12"
+    - nodejs_version: "Current"
+    - nodejs_version: "10"
 
 # Install scripts. (runs after repo cloning)
 install:
