Add html entities by default

--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -72,6 +72,7 @@
     "cspell-dict-en_us": "^1.2.12",
     "cspell-dict-fullstack": "^1.0.10",
     "cspell-dict-golang": "^1.1.9",
+    "cspell-dict-html-symbol-entities": "^1.0.9",
     "cspell-dict-java": "^1.0.7",
     "cspell-dict-latex": "^1.0.8",
     "cspell-dict-lorem-ipsum": "^1.0.6",
