--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -40,8 +40,7 @@
     "commander": "^2.20.0",
     "cspell-trie-lib": "^4.0.3",
     "fs-extra": "^7.0.1",
-    "gensequence": "^2.1.2",
-    "iterable-to-stream": "^1.0.1"
+    "gensequence": "^2.1.2"
   },
   "nyc": {
     "include": [
