Remove the duplicate files from cspell-lib

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "cspell-io": "^4.0.5",
     "iconv-lite": "^0.4.24"
   },
   "nyc": {
