--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -77,6 +77,7 @@
     "cspell-dict-latex": "^1.0.8",
     "cspell-dict-lorem-ipsum": "^1.0.6",
     "cspell-dict-php": "^1.0.8",
+    "cspell-dict-powershell": "^1.0.1",
     "cspell-dict-python": "^1.0.9",
     "cspell-dict-rust": "^1.0.6",
     "cspell-dict-scala": "^1.0.6",
